--- a/components/oyxkv26pu-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/oyxkv26pu-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: oyxkv26pu-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-c83754dca8.34fd.p3.openshiftapps.com/rhtap/rhtap-qe-java-springboot:e9bb7bed4785a6d6124a8a5abeec488ec4985770@sha256:90fb839bac90cdd5556ab78b2f06cb074fbdeb99935375203887c38d19fe4fe4
+          name: container-image
